# text2cypher

./: .gitignore  README.md  evaluate.py  pyproject.toml  requirements.txt  train.py
results/: base_model_test.json  fine_tuned_model_test.json  hub_model_test.json  model_comparison.md  training_history.json
scripts/: compare_results.sh  evaluate_full.sh  evaluate_smoke.sh  train_full.sh  train_smoke.sh
scripts/analysis/: compare_results.py  inspect_data.py  inspect_tokenization.py
src/text2cypher/: collator.py  config.py  data.py  evaluation.py  metrics.py  prompts.py
tests/: test_collator.py  test_data.py  test_evaluate.py  test_metrics.py  test_prompts.py  test_tokenization.py
