[project]
name = "text2cypher"
version = "0.1.0"
description = "Fine-tuning SmolLM2 for natural-language-to-Cypher query generation"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "accelerate>=1.14.0",
    "datasets>=5.0.0",
    "matplotlib>=3.11.0",
    "torch>=2.12.0",
    "transformers>=5.12.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.17",
]

[build-system]
requires = ["uv_build>=0.11.21,<0.12.0"]
build-backend = "uv_build"

[tool.pytest]
testpaths = ["tests"]
addopts = ["-ra"]

[tool.ruff]
line-length = 100
target-version = "py311"
